--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ultra-Advanced Image Editor</title>
+  <title>Drew's Photo Editor</title>
   <style>
     :root {
       --primary-bg: #1f1f1f;
