--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Drews Photo Editor</title>
+  <title>Ultra-Advanced Image Editor</title>
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="theme-color" content="#1f1f1f">
   <style>
     :root {
       --primary-bg: #1f1f1f;
@@ -36,6 +39,26 @@
       flex-shrink: 0;
       position: relative;
     }
+    /* Header buttons */
+    #headerButtons {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+    }
+    #headerButtons button {
+      background: var(--button-bg);
+      border: none;
+      color: var(--text-color);
+      font-size: 18px;
+      margin-left: 5px;
+      padding: 5px 10px;
+      cursor: pointer;
+      border-radius: 4px;
+      transition: background 0.2s;
+    }
+    #headerButtons button:hover {
+      background: var(--button-hover);
+    }
     /* Mobile Sidebar Toggle Button */
     #toggleSidebarBtn {
       position: absolute;
@@ -49,8 +72,8 @@
       padding: 5px 10px;
       cursor: pointer;
       display: none;
+      border-radius: 4px;
     }
-    /* Show toggle on small screens */
     @media (max-width: 768px) {
       #toggleSidebarBtn {
         display: block;
@@ -70,7 +93,6 @@
       border-right: 2px solid var(--border-color);
       transition: transform 0.3s ease;
     }
-    /* Hide sidebar on mobile when collapsed */
     #sidebar.collapsed {
       transform: translateX(-100%);
     }
@@ -90,7 +112,7 @@
     .group-header:hover {
       background: var(--button-hover);
     }
-    /* Expand File group by default */
+    /* Expand first group by default */
     .tool-group:first-child .group-controls {
       display: flex;
     }
@@ -162,7 +184,7 @@
       z-index: 20;
       display: none;
     }
-    /* Modal for text input */
+    /* Modal styling */
     .modal {
       position: fixed;
       top: 0;
@@ -197,7 +219,6 @@
       border-radius: 4px;
       cursor: pointer;
     }
-    /* Responsive adjustments for small screens */
     @media (max-width: 768px) {
       #container {
         flex-direction: column;
@@ -217,7 +238,11 @@
 <body>
   <header>
     <button id="toggleSidebarBtn" aria-label="Toggle Sidebar">☰</button>
-    Drews Photo Editor
+    Ultra-Advanced Image Editor
+    <div id="headerButtons">
+      <button id="fullscreenBtn" aria-label="Toggle Fullscreen">⛶</button>
+      <button id="helpBtn" aria-label="Help">?</button>
+    </div>
   </header>
   <div id="container">
     <aside id="sidebar">
@@ -226,6 +251,7 @@
         <div class="group-header">File</div>
         <div class="group-controls">
           <input type="file" id="upload" accept="image/*" title="Upload Image" aria-label="Upload Image" />
+          <button id="cropBtn" title="Crop Image" aria-label="Crop Image">Crop</button>
           <button id="resetBtn" title="Reset to original image" aria-label="Reset Image">Reset</button>
           <button id="undoBtn" title="Undo last action" aria-label="Undo">Undo</button>
           <button id="redoBtn" title="Redo last undone action" aria-label="Redo">Redo</button>
@@ -344,7 +370,7 @@
       </div>
     </main>
   </div>
-  <!-- Modal for text input -->
+  <!-- Text Modal -->
   <div id="textModal" class="modal">
     <div class="modal-content">
       <h3>Add Text</h3>
@@ -352,7 +378,57 @@
       <button id="modalAddTextBtn">Add Text</button>
     </div>
   </div>
+  <!-- Help Modal -->
+  <div id="helpModal" class="modal">
+    <div class="modal-content">
+      <h3>Welcome to Ultra-Advanced Image Editor</h3>
+      <p>
+        Use the sidebar to upload images, apply transformations, filters, adjustments, and more.
+        Toggle drawing, shapes, text, and AI tools to enhance your photos.
+        Click "Crop" to crop your image, and "Full Screen" for an immersive experience.
+      </p>
+      <button id="closeHelpBtn">Close</button>
+    </div>
+  </div>
   <script>
+    // Debounce function to limit frequent calls
+    function debounce(func, wait) {
+      let timeout;
+      return function(...args) {
+        clearTimeout(timeout);
+        timeout = setTimeout(() => func.apply(this, args), wait);
+      };
+    }
+    // Register a service worker via Blob (for offline/PWA support)
+    if ('serviceWorker' in navigator) {
+      const swCode = `
+      const CACHE_NAME = 'ultra-image-editor-cache-v1';
+      self.addEventListener('install', event => {
+        event.waitUntil(
+          caches.open(CACHE_NAME).then(cache => {
+            return cache.addAll([location.href]);
+          })
+        );
+        self.skipWaiting();
+      });
+      self.addEventListener('fetch', event => {
+        event.respondWith(
+          caches.match(event.request).then(response => {
+            return response || fetch(event.request);
+          })
+        );
+      });
+      self.addEventListener('activate', event => {
+        event.waitUntil(self.clients.claim());
+      });
+      `;
+      const blob = new Blob([swCode], { type: 'application/javascript' });
+      const swUrl = URL.createObjectURL(blob);
+      navigator.serviceWorker.register(swUrl).then(reg => {
+        console.log('Service Worker registered', reg);
+      }).catch(err => console.error('Service Worker registration failed:', err));
+    }
+
     window.onload = function() {
       /*******************
        * Editor State & Elements
@@ -390,12 +466,42 @@
       const modalTextInput = document.getElementById('modalTextInput');
       const sidebar = document.getElementById('sidebar');
       const toggleSidebarBtn = document.getElementById('toggleSidebarBtn');
+      const helpModal = document.getElementById('helpModal');
+      const closeHelpBtn = document.getElementById('closeHelpBtn');
 
       /*******************
        * Responsive Sidebar Toggle
        *******************/
       toggleSidebarBtn.addEventListener('click', () => {
         sidebar.classList.toggle('collapsed');
+      });
+
+      /*******************
+       * Fullscreen Toggle
+       *******************/
+      const fullscreenBtn = document.getElementById('fullscreenBtn');
+      fullscreenBtn.addEventListener('click', () => {
+        if (!document.fullscreenElement) {
+          document.documentElement.requestFullscreen().catch(err => console.error(err));
+        } else {
+          document.exitFullscreen();
+        }
+      });
+
+      /*******************
+       * Help Modal Handling
+       *******************/
+      const helpBtn = document.getElementById('helpBtn');
+      helpBtn.addEventListener('click', () => {
+        helpModal.style.display = 'flex';
+      });
+      closeHelpBtn.addEventListener('click', () => {
+        helpModal.style.display = 'none';
+      });
+      helpModal.addEventListener('click', (e) => {
+        if (e.target === helpModal) {
+          helpModal.style.display = 'none';
+        }
       });
 
       /*******************
@@ -419,7 +525,7 @@
         baseCtx.drawImage(img, 0, 0, baseCanvas.width, baseCanvas.height);
       }
 
-      // Draw shapes and then text
+      // Draw shapes and text
       function redrawOverlay() {
         overlayCtx.clearRect(0, 0, overlayCanvas.width, overlayCanvas.height);
         editor.shapes.forEach(shape => {
@@ -497,16 +603,17 @@
         };
         img.src = finalCanvas.toDataURL();
       }
+      const debouncedUpdateImage = debounce(updateImage, 100);
 
       /*******************
        * Instant Slider Updates
        *******************/
-      document.getElementById('brightnessSlider').addEventListener('input', updateImage);
-      document.getElementById('contrastSlider').addEventListener('input', updateImage);
-      document.getElementById('saturateSlider').addEventListener('input', updateImage);
-      document.getElementById('blurSlider').addEventListener('input', updateImage);
-      document.getElementById('hueSlider').addEventListener('input', updateImage);
-      document.getElementById('rotationSlider').addEventListener('input', updateImage);
+      document.getElementById('brightnessSlider').addEventListener('input', debouncedUpdateImage);
+      document.getElementById('contrastSlider').addEventListener('input', debouncedUpdateImage);
+      document.getElementById('saturateSlider').addEventListener('input', debouncedUpdateImage);
+      document.getElementById('blurSlider').addEventListener('input', debouncedUpdateImage);
+      document.getElementById('hueSlider').addEventListener('input', debouncedUpdateImage);
+      document.getElementById('rotationSlider').addEventListener('input', debouncedUpdateImage);
 
       /*******************
        * File Operations
@@ -556,6 +663,15 @@
           document.getElementById('hueSlider').value = 0;
           saveState();
         }
+      });
+
+      /*******************
+       * Crop Operation
+       *******************/
+      document.getElementById('cropBtn').addEventListener('click', function() {
+        if (!editor.originalImage) return;
+        editor.cropMode = true;
+        alert('Crop mode activated: Click and drag on the image to select area to crop.');
       });
 
       /*******************
@@ -732,7 +848,6 @@
       /*******************
        * AI Tools
        *******************/
-      // AI Auto Enhance: Histogram stretching
       function aiAutoEnhance() {
         if (!editor.originalImage) return;
         const width = baseCanvas.width;
@@ -758,7 +873,6 @@
       }
       document.getElementById('aiAutoEnhanceBtn').addEventListener('click', aiAutoEnhance);
 
-      // AI Remove Noise: 3x3 median filter
       function aiRemoveNoise() {
         if (!editor.originalImage) return;
         const width = baseCanvas.width;
@@ -800,7 +914,6 @@
       }
       document.getElementById('aiRemoveNoiseBtn').addEventListener('click', aiRemoveNoise);
 
-      // AI Color Correction: Basic white balance adjustment
       function aiColorCorrect() {
         if (!editor.originalImage) return;
         const width = baseCanvas.width;
@@ -831,7 +944,6 @@
       }
       document.getElementById('aiColorCorrectBtn').addEventListener('click', aiColorCorrect);
 
-      // AI Style Transfer & AI Face Retouch: Placeholders
       document.getElementById('aiStyleTransferBtn').addEventListener('click', function() {
         alert('AI Style Transfer is under development.');
       });
@@ -840,7 +952,7 @@
       });
 
       /*******************
-       * Unified Pointer Event Handling for Canvas (Supports touch & mouse)
+       * Unified Pointer Event Handling (touch & mouse)
        *******************/
       function getCanvasCoordinates(e) {
         const rect = overlayCanvas.getBoundingClientRect();
@@ -972,7 +1084,6 @@
           editor.draggingText = null;
         }
       });
-      // Ensure pointercancel resets drawing state
       overlayCanvas.addEventListener('pointercancel', function(e) {
         editor.isDrawing = false;
         editor.isDrawingShape = false;
@@ -1011,7 +1122,6 @@
        *******************/
       document.getElementById('toggleDrawBtn').addEventListener('click', function() {
         editor.drawMode = !editor.drawMode;
-        // When drawing mode is active, we let overlayCanvas capture pointer events
         overlayCanvas.style.pointerEvents = "auto";
         if (editor.drawMode) {
           alert('Drawing mode activated: Draw on the image.');
